CB-1533 remove relation between Environment and proxy